# mychat

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
cmake/: EnableCcache.cmake  PedanticCompiler.cmake  Sanitizers.cmake  Version.cmake
src/: .clang-format  .clang-tidy
src/agent/: AgentLoop.cpp  AgentLoop.hpp  CMakeLists.txt
src/audio/: AudioCapture.cpp  AudioCapture.hpp  AudioPipeline.cpp  AudioPipeline.hpp  AudioPlayback.cpp  AudioPlayback.hpp  CMakeLists.txt  MiniaudioImpl.cpp  Transcriber.cpp  Transcriber.hpp  TtsSpeaker.cpp  TtsSpeaker.hpp  VoiceActivityDetector.cpp  VoiceActivityDetector.hpp
src/core/: CMakeLists.txt  Error.hpp  JsonUtils.hpp  Log.cpp  Log.hpp  Types.hpp
src/llm/: CMakeLists.txt  ChatSession.cpp  ChatSession.hpp  LlmEngine.cpp  LlmEngine.hpp  Sampler.hpp
src/mcp/: CMakeLists.txt  JsonRpc.cpp  JsonRpc.hpp  McpClient.cpp  McpClient.hpp  ServerManager.cpp  ServerManager.hpp  StdioTransport.cpp  StdioTransport.hpp  Transport.hpp
src/mychat/: App.cpp  App.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Main.cpp
src/tests/: AgentLoopTests.cpp  CMakeLists.txt  ChatSessionTests.cpp  ConfigTests.cpp  JsonRpcTests.cpp  Main.cpp  McpClientTests.cpp  StdioTransportTests.cpp  TuiTests.cpp
src/tui/: Box.cpp  Box.hpp  CMakeLists.txt  Dialog.cpp  Dialog.hpp  Element.hpp  InputEvent.hpp  InputField.cpp  InputField.hpp  KeyCode.hpp  List.cpp  List.hpp  LogPanel.cpp  LogPanel.hpp  MarkdownRenderer.cpp  MarkdownRenderer.hpp  Modifier.hpp  Sixel.cpp  Sixel.hpp  Spinner.cpp  Spinner.hpp  StatusBar.cpp  StatusBar.hpp  Terminal.cpp  Terminal.hpp  TerminalInput.cpp  TerminalInput.hpp  TerminalOutput.cpp  TerminalOutput.hpp  Text.cpp  Text.hpp  Theme.cpp  Theme.hpp  VtParser.cpp  VtParser.hpp
